# TFT-CUDA

./: .gitattributes  .gitignore  GRADIENT_EXPLOSION_SOLUTION.md  Makefile  README.md  apply_fixes.py  check_shape_error.py  debug_edge_cases.py  debug_tft_shapes.py  demo.py  diagnose_dataloader.py  evaluate_tft.py  gradient_diagnostics.json  pyproject.toml  run_diagnostics.py  run_evaluation.sh  setup.py  setup_pytorch.py  test_gradient_stability.py  test_normalization.py  train.py  train.sh  train_tft_fp32.py  train_tft_production.py  train_tft_simple.py  train_trading.py
.github/: # Code Citations.md  copilot-commit-instructions.md  copilot-cuda-instructions.md  copilot-financial-ml-instructions.md  copilot-instructions.md
.github/instructions/: copilot-commit-instructions.md.instructions.md  copilot-cuda-instructions.md.instructions.md  copilot-financial-ml.instructions.md  copilot.instructions.md  wsl.instructions.md
.github/workflows/: ci.yml
.spyproject/config/: workspace.ini
checkpoints/: production_model_best.pth  production_model_final.pth
config/: default_config.json  ensemble.json  optimal_lr.json
cpp/: CMakeLists.txt  CMakeLists_original.txt  get_torch_paths.py  pytorch_compat.h  test_minimal.cpp  test_pytorch_headers  test_pytorch_headers.cpp  tft_cuda.h  tft_cuda_impl.cpp  tft_cuda_impl.cu
cpp/backward_pass/: layer_norm_backward.cu  linear_bwd.cu  lstm_backward.cu  mha_backward.cu  quantile_heads_backward.cu
cpp/bindings/: tft_bindings.cpp
cpp/build_minimal/: CMakeCache.txt  Makefile  cmake_install.cmake  test_minimal
cpp/build_pytorch_test/: CMakeCache.txt  CMakeLists.txt
cpp/forward_pass/: linear_fwd.cu  lstm.cu  mha.cu  quantile_heads.cu  static_encoder.cu
cpp/interpretability/: attention_aggregate.cu  static_embedding_importance.cu  vsn_aggregate.cu
cpp/tft_cuda_impl/: cpp
data/: X_val.npy  feature_metadata.json  features.csv  features.parquet  temporal_metadata.json  y_train.npy  y_val.npy  y_val_temporal.npy
docs/: BUILD_REPORT.md  CLAUDE.md  GRADIENT_EXPLOSION_SOLUTION.md  README.md
evaluation_results/: evaluation_report_20250921_124728.json
logs/: events.out.tfevents.1758357421.runnervmf4ws1.3877.0
python/: __init__.py  data.py  function_activations.py  interpretability.py  loss.py  lr_scheduler.py  temporal_features.py  tft_model.py  trainer.py  utils.py
python/tft_cuda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build.sh  check_data.py  debug.sh  diagnose_gradient_explosion.py  diagnose_gradients.py  find_lr.py  test.sh  train.sh  train_fixed.py
tests/: run_tests.py  test_basic.py  test_simple.py
